[gd_scene load_steps=16 format=2]

[ext_resource path="res://ResourcesV2/Images/pixelSkyline.jpg" type="Texture" id=1]
[ext_resource path="res://ResourcesV2/Images/MainLogo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainScenesV2/ControlSetting.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Singletons/btnParent.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Singletons/controlScript.gd" type="Script" id=5]
[ext_resource path="res://ResourcesV2/Images/BackInactive.png" type="Texture" id=7]
[ext_resource path="res://ResourcesV2/Images/BackActive.png" type="Texture" id=8]
[ext_resource path="res://Resources/Fonts/8bitlimr.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 10 )

[node name="Background" type="TextureRect"]
anchor_top = -0.00173807
anchor_bottom = -0.00173807
margin_left = -1.33484
margin_right = 1366.67
margin_bottom = 765.0
rect_pivot_offset = Vector2( -298.754, 62.1887 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]
script = ExtResource( 5 )

[node name="logoRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_top = 93.0
margin_right = 182.0
margin_bottom = 216.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -151.5
margin_right = 82.5
margin_bottom = -102.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLabel" type="Label" parent="."]
margin_left = 1106.58
margin_top = 169.525
margin_right = 1186.58
margin_bottom = 191.525
custom_fonts/font = SubResource( 2 )
text = "Username"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 533.0
margin_top = 295.0
margin_right = 845.0
margin_bottom = 664.0
rect_min_size = Vector2( 300, 344 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 10.0
margin_left = 532.757
margin_top = 308.781
margin_right = 832.757
margin_bottom = 652.781
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 312.0
margin_bottom = 340.0
rect_min_size = Vector2( 300, 340 )
custom_styles/bg = SubResource( 4 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 300.0
margin_bottom = 609.0
rect_min_size = Vector2( 300, 320 )
custom_constants/separation = 20

[node name="movementLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "  Movement"
align = 1

[node name="upContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 73.0

[node name="upLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/upContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Up"
align = 1
valign = 1

[node name="upButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/upContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "W"
script = ExtResource( 4 )
action_name = "up_W"

[node name="downContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 300.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/downContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Down"
align = 1
valign = 1

[node name="downButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/downContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "S"
script = ExtResource( 4 )
action_name = "down_S"

[node name="leftContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 300.0
margin_bottom = 173.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/leftContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Left"
align = 1
valign = 1

[node name="leftButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/leftContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "A"
script = ExtResource( 4 )
action_name = "left_A"

[node name="rightContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 300.0
margin_bottom = 223.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/rightContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Right"
align = 1
valign = 1

[node name="rightButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/rightContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "D"
script = ExtResource( 4 )
action_name = "right_D"

[node name="attackLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 300.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "  Attack"
align = 1

[node name="minesContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 286.0
margin_right = 300.0
margin_bottom = 316.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/minesContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Mines"
align = 1
valign = 1

[node name="minesButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/minesContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "X"
script = ExtResource( 4 )
action_name = "plant_landmine"

[node name="grenadeContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 300.0
margin_bottom = 366.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/grenadeContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Grenade"
align = 1
valign = 1

[node name="grenadeButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/grenadeContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "Z"
script = ExtResource( 4 )
action_name = "throw_item"

[node name="barrelContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 300.0
margin_bottom = 416.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/barrelContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Barrel"
align = 1
valign = 1

[node name="barrelButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/barrelContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "V"
script = ExtResource( 4 )
action_name = "place_barrel"

[node name="wallsContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 300.0
margin_bottom = 466.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/wallsContainer"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Walls"
align = 1
valign = 1

[node name="wallsButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/wallsContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "C"
script = ExtResource( 4 )
action_name = "place_fakewall"

[node name="otherLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 300.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "  Other"
align = 1

[node name="nextWeapon" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 529.0
margin_right = 300.0
margin_bottom = 559.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/nextWeapon"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Next Weapon"
align = 1
valign = 1

[node name="nextButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/nextWeapon"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "E"
script = ExtResource( 4 )
action_name = "next_weapon"

[node name="prevWeapon" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 579.0
margin_right = 300.0
margin_bottom = 609.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/prevWeapon"]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Prev Weapon"
align = 1
valign = 1

[node name="prevButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/prevWeapon"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "Q"
script = ExtResource( 4 )
action_name = "previous_weapon"

[node name="backButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -86.0
margin_right = 42.0
margin_bottom = -41.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/nextWeapon/nextButton" to="." method="_on_nextButton_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
